--- a/my-app/src/components/projectCards/styles.module.scss
+++ b/my-app/src/components/projectCards/styles.module.scss
@@ -1,16 +1,21 @@
-.sticky {
+.rank_section{
     display: flex;
     flex-direction: column;
-    position: sticky;
-    top: 0;
+}
+.projects_section{
+    display: flex;
+    gap: 1em;
 }
 
 .cards_scss {
     display: flex;
-    align-items: center;
-    flex-wrap: wrap;
+    flex-direction: column;
     gap: 1em;
     padding: 1em;
+
+    h2 {
+        color: var(--dark-white);
+    }
     
     article{
         padding-top: 0em;
@@ -19,9 +24,26 @@
         background-color: #00000080;
         display: flex;
         flex-direction: column;
-        width: 16em;
+        width: 20em;
         border-radius: 8px;
         gap: 1.5em;
+
+        > div{
+            display: flex;
+            justify-content: space-around;
+
+            button{
+                cursor: pointer;
+                font-size: 1em;
+                font-weight: 700;
+                padding: 0.2em 1em;
+            
+                &:hover{
+                    background-color: var(--dark-white);
+                    color: var(--light-white);
+                }
+            }
+        }
     }
     
     figure{
