--- a/my-app/src/components/nav/styles.module.scss
+++ b/my-app/src/components/nav/styles.module.scss
@@ -5,18 +5,32 @@
     top: 0;
 }
 
+.logo {
+    margin: 1em 0;
+}
+
 .nav_scss {
-    position: relative;
     background-color: var(--light-dark);
     color: var(--light-white);
     width: var(--nav-width);
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
+    align-items: flex-start;
+    justify-content: center;
     
-    flex-direction: column;
-    gap: 1em;
+    img{
+        filter: invert(1);
+        max-width: 100%;
+        max-height: 100%;
 
+        &:hover{
+            filter: invert(1) sepia(100%) saturate(500%) hue-rotate(700deg);
+        }
+
+        &.highlight {
+            filter: invert(1) sepia(100%) saturate(600%) hue-rotate(150deg) !important;
+        }
+    }
+    
     figure{
         height: 40px;
         display: flex;
@@ -28,5 +42,11 @@
         display: flex;
         flex-direction: column;
         gap: .5em;
+
+        li {
+            display: flex;
+            justify-content: center;
+        }
     }
 }
+
