--- a/my-app/src/app/page.module.scss
+++ b/my-app/src/app/page.module.scss
@@ -1,3 +1,44 @@
+$left-color:  #242e4d;
+$right-color: #897e79;
+$green-dark:  #35c3c1;
+$green-light: #00d6b7;
+$gray:        #8f8f8f;
+$gray-light:  #f5f6f8;
+
 .Home {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    text-align: center;
     color: #fff;
+  
+    h1 {
+      font-size: 2rem;
+    }
+  }
+  
+  
+.lf_submit {
+    display: block;
+    padding: 1em;
+    width: 100%;
+    background: linear-gradient(
+        to right,
+        $green-dark,
+        $green-light
+    );
+    border: 0;
+    color: #fff;
+    cursor: pointer;
+    font-size: .75em;
+    font-weight: 600;
+    text-shadow: 0 1px 0 rgba(black, .2);
+
+    &:focus {
+        outline: none;
+        transition: transform .15s ease;
+        transform: scale(1.1);
+    }
 }
