--- a/my-app/src/app/blackhole/page.module.scss
+++ b/my-app/src/app/blackhole/page.module.scss
@@ -1,9 +1,3 @@
-.filters{
-    font-size: 1.4em;
-    display: flex;
-    flex-direction: column;
-    width: 10em;
-    gap: .4em;
-    color: #fff;
-    margin: 2em auto;
+.projectList{
+    
 }
