a bunch of updates! And the tokens are hot

--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -4,7 +4,7 @@
     "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
-  --light-dark: #2c2c34;
+  --light-dark: #292D39;
   --dark-dark: #1e212a;
   --dark-white: #666e80;
   --light-white: #fff;
