--- a/my-app/src/components/nav/styles.module.scss
+++ b/my-app/src/components/nav/styles.module.scss
@@ -4,6 +4,7 @@
     flex-direction: column;
     position: sticky;
     width: 100%;
+    height: 100%;
     top: 0;
 }
 
@@ -57,11 +58,17 @@
         flex-direction: column;
         gap: 2em;
         width: 100%;
+        height: 100%;
 
         li {
             display: flex;
             justify-content: center;
             width: 100%;
+
+            &:last-of-type {
+                margin-top: auto;
+                margin-bottom: 2em;
+            }
         }
     }
 }
