--- a/my-app/src/components/projectCards/styles.module.scss
+++ b/my-app/src/components/projectCards/styles.module.scss
@@ -49,6 +49,7 @@
     
     figure{
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
 
