make the project_users in blackhole

--- a/my-app/src/components/projectCards/styles.module.scss
+++ b/my-app/src/components/projectCards/styles.module.scss
@@ -70,3 +70,13 @@
         }
     }
 }
+
+.red{
+    background-color: #ff000080;
+}
+.green{
+    background-color: #1eff0080;
+}
+.orange{
+    background-color: #ffe10080;
+}
