--- a/my-app/src/components/header/styles.scss
+++ b/my-app/src/components/header/styles.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     position: sticky;
+    width: 100%;
     top: 0;
     z-index: 19;
     padding: 0 2em;
