Projects Context created

--- a/my-app/src/components/projectCards/styles.scss
+++ b/my-app/src/components/projectCards/styles.scss
@@ -47,7 +47,7 @@
         }
     }
     
-    figure{
+    header{
         display: flex;
         flex-direction: column;
         justify-content: center;
