working rank projects merged filters

--- a/my-app/src/components/header/styles.scss
+++ b/my-app/src/components/header/styles.scss
@@ -7,6 +7,9 @@
     z-index: 19;
     padding: 0 2em;
     justify-content: center;
+    background-color: var(--light-white);
+    height: 60px;
+    color: var(--dark-dark);
 
     > div{
         display: flex;
