--- a/my-app/src/components/projectCards/styles.scss
+++ b/my-app/src/components/projectCards/styles.scss
@@ -26,6 +26,21 @@
         }
     }
 
+    .form-container {
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.3s ease-out;
+        
+        li{
+          flex-direction: column;
+        }
+        
+    }
+    .form-container.visible {
+        max-height: 300px;
+    }
+        
+      
     .projects_section{
         display: flex;
         flex-wrap: wrap;
@@ -48,11 +63,11 @@
             justify-content: space-around;
 
             button{
-                cursor: pointer;
                 font-size: 1em;
                 font-weight: 700;
                 padding: 0.2em 1em;
-            
+                margin: 1em;
+                
                 &:hover{
                     background-color: var(--dark-white);
                     color: var(--light-white);
@@ -66,6 +81,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        min-height: 8em;
 
         span {
             font-size: 2em;
